<resources>
    <string name="app_name">Audio Player</string>
    <string name="notification_channel_name">Music</string>
    <string name="notification_channel_description">Notification channel for playing music</string>
    <string name="next_song">Next: %1$s - %2$s</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="unexpected_error_player">Couldn\'t play the song.
        The application has encountered an unexpected error</string>
    <string name="playback_time">00:00</string>
    <string name="skip_to_the_next_song">Skip to the next song</string>
    <string name="play_or_pause_the_music">Play or pause the music</string>
    <string name="skip_to_the_previous_song">Skip to the previous song</string>
    <string name="general_error">An unknown error has occurred</string>
    <string name="retry">Retry</string>
    <string name="no_wi_fi_error">No Wi-Fi connection</string>
</resources>