<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@id/artist"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        tools:src="@drawable/ic_music_note_notification"
        android:importantForAccessibility="no"/>

    <TextView
        android:id="@+id/artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAlignment="center"
        android:textSize="12pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/song_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_art"
        tools:text="Lana Del Rey Lana Del Rey Lana Del Rey" />

    <TextView
        android:id="@+id/song_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAlignment="center"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@id/play_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artist"
        tools:text="Gods And Monsters Gods And Monsters Gods And Monsters Gods And Monsters" />

    <ImageButton
        android:id="@+id/skip_to_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_round_skip_previous_48"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@+id/play_pause"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/song_title"
        android:contentDescription="@string/skip_to_the_previous_song" />

    <ImageButton
        android:id="@+id/play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_round_play_circle_outline_48"
        app:layout_constraintEnd_toStartOf="@+id/skip_to_next"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/skip_to_previous"
        app:layout_constraintTop_toBottomOf="@id/song_title"
        app:layout_constraintBottom_toTopOf="@id/seekBar"
        android:contentDescription="@string/play_or_pause_the_music" />

    <ImageButton
        android:id="@+id/skip_to_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_round_skip_next_48"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/play_pause"
        app:layout_constraintTop_toBottomOf="@id/song_title"
        android:contentDescription="@string/skip_to_the_next_song" />

    <ImageView
        android:id="@+id/music_queue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_queue_music_48"
        app:layout_constraintBottom_toBottomOf="@id/next_song"
        app:layout_constraintTop_toTopOf="@id/next_song"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/next_song"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="@id/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/music_queue"
        app:layout_constraintTop_toTopOf="@id/rectangle"
        tools:text="Next: Kent - Columbus  some long long long name" />

    <TextView
        android:id="@+id/position_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/playback_time"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/music_queue"
        app:layout_constraintEnd_toStartOf="@id/duration_time"
        app:layout_constraintStart_toEndOf="@id/position_time"
        app:layout_constraintTop_toBottomOf="@+id/play_pause" />

    <TextView
        android:id="@+id/duration_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/playback_time"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/seekBar"
        app:layout_constraintTop_toTopOf="@+id/seekBar" />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="0"
        android:src="@drawable/light_purple_rectangle"
        android:translationZ="-2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/music_queue"
        android:importantForAccessibility="no" />


</androidx.constraintlayout.widget.ConstraintLayout>